tests/ui/fail/incomplete/derive-enum.stderr
error: incomplete arguments syntax is not authorized because the feature flag "allow-incomplete" is not set
  --> tests/ui/fail/incomplete/derive-enum.rs:10:44
   |
10 |     #[l10n_message(".busy", "reason" = .0, ...)]
   |                                            ^^^
